# mac-10-

./: .gitignore  README.md  index.html  package-lock.json  package.json  pyproject.toml  tsconfig.json  tsconfig.node.tsbuildinfo  vite.config.js
.github/: copilot-instructions.md
.github/workflows/: verify.yml
docs/: ACTION_SURFACE.md  BUILD_PHASES.md  CHECKPOINT.md  COMMAND_SPINE.md  DECISIONS.md  LESSONS.md  PRODUCT_CONTRACT.md  RUNTIME_ARCHITECTURE.md  SECURITY_MODEL.md  TRUST_MODEL.md  UI_DOCTRINE.md
mac10/: __init__.py  __main__.py  actions.py  cli.py  interpreter.py  vocabulary.py
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: app_executor.rs  executor.rs  lib.rs  main.rs  native_environment.rs  volume_executor.rs
src/hooks/: usePreviewPrediction.ts
src/resolver/: nativeEnvironmentIndex.ts  phraseGrammar.ts  previewResolver.ts
src/spine/: approve.ts  executor.ts  governor.ts  history.ts  outcomeMessage.ts  parser.ts  registry.ts  risk.ts  runSpine.ts  undoPolicy.ts  validator.ts
src/types/: nativeEnvironment.ts
tests/: governor-context.test.ts  indexed-command-architecture.test.ts  spine-trust-layer.test.ts  test_interpreter.py  test_vocabulary.py  ui-doctrine.test.ts
