[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "mac10"
version = "0.1.0"
description = "Command your Mac in one sentence — AI-grade interpretation layer."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

[project.scripts]
mac10 = "mac10.cli:main"

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
testpaths = ["tests"]
