[package]
name = "macten"
version = "0.1.0"
description = "Macten command strip"
edition = "2021"
rust-version = "1.77"

[lib]
name = "macten_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
plist = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
